@@ -1,15 +1,22 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
+FROM golang:1.23-alpine
 
-FROM openjdk:8-jre-slim
+WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
+COPY . .
+
+RUN go build -o ./bin/main ./cmd/main
+
+ENV SERVER_ADDRESS=0.0.0.0:8080
+ENV POSTGRES_CONN=
+ENV POSTGRES_JDBC_URL=
+ENV POSTGRES_USERNAME=
+ENV POSTGRES_PASSWORD=
+ENV POSTGRES_HOST=
+ENV POSTGRES_PORT=
+ENV POSTGRES_DATABASE=
 
 EXPOSE 8080
 
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+CMD ["./bin/main"]
 
